# rust-graphql

./: README.md
.devcontainer/: devcontainer.json
detch_treat/: .gitignore  Cargo.toml  README.md
detch_treat/src/: cli.rs  main.rs  members.rs  participant.rs  validation.rs
detch_treat/src/validation/: validationStrategy.rs
dutch_treat/: Cargo.toml
dutch_treat/src/: cli.rs  main.rs  tasks.rs
fizzbuzz/src/: main.rs
graph-ql/: Cargo.toml  README.md
graph-ql/src/: main.rs
graph_ql/: Cargo.toml
graph_ql/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
idp/: Cargo.toml
idp/doc/: Rust-idp.postman_collection.json  domain.md
idp/src/: domain.rs  hello_rest.rs  main.rs  resource.rs
idp/src/domain/: mail_address.rs  my_float.rs
idp/src/entity/: user.rs
idp/src/error/: my_error.rs
idp/src/resource/: hello_html.rs  hello_resource.rs  hello_rest.rs  idp_resource.rs
idp/src/resource/model/: response_model.rs
idp/src/test/: domain.rs
idp/src/test/domain/: test_mail_address.rs  test_my_float.rs
idp/src/test/entity/: test_user.rs
idp/src/token/: jwt.rs
todo_app/: .gitignore  Cargo.toml
todo_app/src/: cli.rs  main.rs  tasks.rs
