[package]
name = "graph-ql"
version = "0.1.0"
authors = ["ShunichirouKamino <kamino.shunichirou@isid.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0"
async-graphql-actix-web = "3.0"
actix-web = { version = "4.0.0-beta.13", default-features = false }
once_cell = "1.8.0"