[package]
name = "idp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4.16"
mime = "0.3.16"
jsonwebtoken = "8"
chrono = "0.4.19"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
