[package]
edition = "2021"
name = "idp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
env_logger = "0.9"
jsonwebtoken = "8"
log = "0.4.16"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
